Implementing `updateCommands` function (#100)
* first pass on implementing the `updateCommands` function

* remove old deleting functions

* replaced all `Arrays#asList` with `List#of`

* updated error messages